--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/rest"]
 	path = src/rest
-	url = http://192.168.1.212:8111/jacor4454/c-rest-api.git
+	url = https://github.com/jacor4454/c-rest-api.git
